Patient table complete